// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`normal call at 80 columns 1`] = `
[
  "<warning>◐︎ </warning> <toolTitle+bold>codemode</toolTitle+bold><muted> · </muted><syntaxKeyword>return</syntaxKeyword> <syntaxNumber>1</syntaxNumber>;                                                         ",
]
`;

exports[`truncated and expanded call at 80 columns: preview 1`] = `
[
  "<warning>◐︎ </warning> <toolTitle+bold>codemode</toolTitle+bold><muted> · </muted>",
  "   <syntaxKeyword>const</syntaxKeyword> n0 = <syntaxNumber>0</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n1 = <syntaxNumber>1</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n2 = <syntaxNumber>2</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n3 = <syntaxNumber>3</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n4 = <syntaxNumber>4</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n5 = <syntaxNumber>5</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n6 = <syntaxNumber>6</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n7 = <syntaxNumber>7</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n8 = <syntaxNumber>8</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n9 = <syntaxNumber>9</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n10 = <syntaxNumber>10</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n11 = <syntaxNumber>11</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n12 = <syntaxNumber>12</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n13 = <syntaxNumber>13</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n14 = <syntaxNumber>14</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n15 = <syntaxNumber>15</syntaxNumber>;",
  "<muted>   … +4 lines</muted>",
]
`;

exports[`truncated and expanded call at 80 columns: expanded 1`] = `
[
  "<warning>◐︎ </warning> <toolTitle+bold>codemode</toolTitle+bold><muted> · </muted>",
  "   <syntaxKeyword>const</syntaxKeyword> n0 = <syntaxNumber>0</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n1 = <syntaxNumber>1</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n2 = <syntaxNumber>2</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n3 = <syntaxNumber>3</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n4 = <syntaxNumber>4</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n5 = <syntaxNumber>5</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n6 = <syntaxNumber>6</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n7 = <syntaxNumber>7</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n8 = <syntaxNumber>8</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n9 = <syntaxNumber>9</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n10 = <syntaxNumber>10</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n11 = <syntaxNumber>11</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n12 = <syntaxNumber>12</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n13 = <syntaxNumber>13</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n14 = <syntaxNumber>14</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n15 = <syntaxNumber>15</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n16 = <syntaxNumber>16</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n17 = <syntaxNumber>17</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n18 = <syntaxNumber>18</syntaxNumber>;",
  "   <syntaxKeyword>const</syntaxKeyword> n19 = <syntaxNumber>19</syntaxNumber>;",
]
`;

exports[`long call wraps at 80 columns 1`] = `
[
  "<warning>◐︎ </warning> <toolTitle+bold>codemode</toolTitle+bold><muted> · </muted>",
  "   <syntaxKeyword>return</syntaxKeyword>",
  "   <syntaxString>"abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdef</syntaxString>",
  "   <syntaxString>ghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghij"</syntaxString>;",
]
`;

exports[`long result wraps preview and expansion at 80 columns: preview 1`] = `
[
  "<toolOutput>first</toolOutput>                                                                           ",
  "                                                                                ",
  "<toolOutput>abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghij</toolOutput>",
  "<toolOutput>abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghij</toolOutput>          ",
  "<toolOutput>last</toolOutput>                                                                            ",
  "<muted>0.3s</muted>                                                                            ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`long result wraps preview and expansion at 80 columns: expanded 1`] = `
[
  "<toolOutput>first</toolOutput>                                                                           ",
  "                                                                                ",
  "<toolOutput>abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghij</toolOutput>",
  "<toolOutput>abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghij</toolOutput>          ",
  "<toolOutput>last</toolOutput>                                                                            ",
  "<muted>0.3s</muted>                                                                            ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`long call wraps at 120 columns 1`] = `
[
  "<warning>◐︎ </warning> <toolTitle+bold>codemode</toolTitle+bold><muted> · </muted>",
  "   <syntaxKeyword>return</syntaxKeyword>",
  "   <syntaxString>"abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdef</syntaxString>",
  "   <syntaxString>ghijabcdefghij"</syntaxString>;",
]
`;

exports[`long result wraps preview and expansion at 120 columns: preview 1`] = `
[
  "<toolOutput>first</toolOutput>                                                                                                                   ",
  "                                                                                                                        ",
  "<toolOutput>abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghij</toolOutput>",
  "<toolOutput>abcdefghijabcdefghijabcdefghij</toolOutput>                                                                                          ",
  "<toolOutput>last</toolOutput>                                                                                                                    ",
  "<muted>0.3s</muted>                                                                                                                    ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`long result wraps preview and expansion at 120 columns: expanded 1`] = `
[
  "<toolOutput>first</toolOutput>                                                                                                                   ",
  "                                                                                                                        ",
  "<toolOutput>abcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghijabcdefghij</toolOutput>",
  "<toolOutput>abcdefghijabcdefghijabcdefghij</toolOutput>                                                                                          ",
  "<toolOutput>last</toolOutput>                                                                                                                    ",
  "<muted>0.3s</muted>                                                                                                                    ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`JSON output omits host header and closes with success 1`] = `
[
  "<syntaxPunctuation>{</syntaxPunctuation>                                                                               ",
  "  <syntaxVariable>"ok"</syntaxVariable><syntaxPunctuation>:</syntaxPunctuation> <syntaxKeyword>true</syntaxKeyword>                                                                    ",
  "<syntaxPunctuation>}</syntaxPunctuation>                                                                               ",
  "<muted>0.3s</muted>                                                                            ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`collapsed success hides the call and expansion restores the body: collapsed 1`] = `
[
  "<success>✓ </success> <toolTitle+bold>codemode</toolTitle+bold> <muted>·</muted> <muted>0 calls · 3 lines · 0.3s</muted>                                          ",
]
`;

exports[`collapsed success hides the call and expansion restores the body: expanded 1`] = `
[
  "<toolOutput>plain</toolOutput>                                                                           ",
  "<muted>0.3s</muted>                                                                            ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`failed output remains visible with an error close 1`] = `
[
  "<error>Script error:</error>                                                                   ",
  "<error>bad input</error>                                                                       ",
  "<muted>0.3s</muted>                                                                            ",
  "<error>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </error>",
]
`;

exports[`partial output shows the latest eight calls without a completed frame 1`] = `
[
  "<muted>… +2 earlier calls</muted>                                                              ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file2</dim>                                                                    ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file3</dim>                                                                    ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file4</dim>                                                                    ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file5</dim>                                                                    ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file6</dim>                                                                    ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file7</dim>                                                                    ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file8</dim>                                                                    ",
  "<warning>◐︎</warning> <toolTitle>read</toolTitle> <dim>file9</dim>                                                                    ",
]
`;

exports[`mixed call status, empty output and image placeholder: statuses 1`] = `
[
  "<success>✓︎</success> <toolTitle>read</toolTitle> <dim>file0</dim><muted> · 0.1s · $0.01</muted>                                                     ",
  "<error>✗︎</error> <toolTitle>read</toolTitle> <dim>file1</dim><muted> · 0.1s · $0.01</muted>                                                     ",
  "<muted>⊘︎</muted> <toolTitle>read</toolTitle> <dim>file2</dim><muted> · 0.1s · $0.01</muted>                                                     ",
  "<toolOutput>plain</toolOutput>                                                                           ",
  "<muted>0.3s · $0.03</muted>                                                                    ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`mixed call status, empty output and image placeholder: empty 1`] = `
[
  "<muted>(empty output)</muted>                                                                  ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`mixed call status, empty output and image placeholder: image 1`] = `
[
  "<toolOutput>[image: image/png]</toolOutput>                                                              ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;

exports[`unknown host output and full-output path remain intact 1`] = `
[
  "<toolOutput>new host header</toolOutput>                                                                 ",
  "<toolOutput>raw output</toolOutput>                                                                      ",
  "<muted>Full output: fixtures/full.txt</muted>                                                  ",
  "<success>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </success>",
]
`;
